--- a/css/index.css
+++ b/css/index.css
@@ -438,6 +438,7 @@ html, body {
     height: 100%;
     background: rgba(0, 0, 0, 0.8);
     perspective: 1000px;
+    overflow: hidden;
 }
 .identity .light {
     position: absolute;
