--- a/css/index.css
+++ b/css/index.css
@@ -387,6 +387,7 @@ html, body {
     height: 100%;
     width: 100%;
     background: rgba(0, 0, 0, 0.35);
+    overflow: hidden;
 }
 .sitting .sit-background {
     height: 170px;
@@ -427,6 +428,18 @@ html, body {
 .sitting .seat.sit-down {
     color: #000;
     background: #fff;
+}
+.sitting .game-start-btn {
+    border: 3px solid #fff;
+    border-radius: 10px;
+    color: #fff;
+    text-align: center;
+    line-height: 40px;
+    width: 50%;
+    position: absolute;
+    bottom: 8%;
+    left: 0;
+    right: 0;
 }
 
 /* 身份界面 */
@@ -560,7 +573,7 @@ html, body {
 
 /* 遮罩层 */
 .mask {
-    display: none;
+    /*display: none;*/
     position: absolute;
     top: 0;
     left: 0;
@@ -568,6 +581,36 @@ html, body {
     width: 100%;
     background: #000;
     z-index: 999999;
+    overflow: hidden;
+}
+.mask .mask-words {
+    display: inline-block;
+    color: #fff;
+    font-size: 2rem;
+    text-align: center;
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 50%;
+    transform: translateY(-50%) scale(2);
+    -moz-transform: translateY(-50%) scale(2);
+    -webkit-transform: translateY(-50%) scale(2);
+    opacity: 0;
+    transition: all 1s cubic-bezier(.86, 0, .07, 1);
+    -moz-transition: all 1s cubic-bezier(.86, 0, .07, 1);
+    -webkit-transition: all 1s cubic-bezier(.86, 0, .07, 1);
+}
+.mask.active .mask-words {
+    transform: translateY(-50%) scale(1);
+    -moz-transform: translateY(-50%) scale(1);
+    -webkit-transform: translateY(-50%) scale(1);
+    opacity: 1;
+}
+.mask.inactive .mask-words {
+    transform: translateY(-50%) scale(0.5);
+    -moz-transform: translateY(-50%) scale(0.5);
+    -webkit-transform: translateY(-50%) scale(0.5);
+    opacity: 0;
 }
 .page-waiting {
     opacity: 0.5;
@@ -575,6 +618,141 @@ html, body {
          -o-transition: opacity 0.5s;
        -moz-transition: opacity 0.5s;
     -webkit-transition: opacity 0.5s;
+}
+
+/* 游戏进度状态面板 */
+.game-status-panel {
+    box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    position: relative;
+    top: 45%;
+    transform: translateY(-50%);
+    -moz-transform: translateY(-50%);
+    -webkit-transform: translateY(-50%);
+}
+.game-progress {
+    color: #fff;
+    padding: 20px 0;
+    font-size: 1rem;
+    position: relative;
+    margin-left: 35%;
+    box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+}
+.game-progress.done:before {
+    background: #fff;
+}
+.game-progress:before {
+    content: "";
+    display: inline-block;
+    background: transparent;
+    border: 2px solid #fff;
+    border-radius: 50%;
+    position: absolute;
+    left: -3rem;
+    top: 50%;
+    transform: translateY(-50%);
+    -moz-transform: translateY(-50%);
+    -webkit-transform: translateY(-50%);
+    height: 1rem;
+    width: 1rem;
+    box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    transition: all 0.3s;
+    -moz-transition: all 0.3s;
+    -webkit-transition: all 0.3s;
+}
+.game-progress-tip {
+    font-size: 0.8rem;
+    text-align: center;
+    margin-top: 10px;
+    color: #bbb;
+}
+
+/* 聊天内容 */
+.chatPart {
+    display: none;
+    position: absolute;
+    bottom: 6%;
+    height: 24%;
+    width: 100%;
+    border-top: 3px solid #fff;
+    overflow: scroll;
+    -webkit-overflow-scrolling: touch;
+}
+.chatInputBox {
+    display: none;
+    height: 5%;
+    position: absolute;
+    bottom: 1%;
+    left: 0;
+    right: 0;
+    width: 95%;
+    border: 2px solid #fff;
+    border-radius: 5px;
+    box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+}
+.chatInputBox:before {
+    content: "请输入您的发言";
+    color: #fff;
+    font-size: 0.9rem;
+    line-height: 2.1;
+    padding-left: 2%;
+}
+.chatInputBox:after {
+    content: "发送";
+    position: absolute;
+    right: 0;
+    color: #fff;
+    font-size: 0.9rem;
+    line-height: 2.1;
+    padding: 0 2%;
+    border-left: 2px solid #fff;
+}
+.chatPart .user-chat-content {
+    padding: 10px 0;
+    font-size: 0;
+}
+.chatPart .user-chat-id {
+    vertical-align: top;
+    font-size: 0.9rem;
+    color: #fff;
+    float: left;
+    width: 50px;
+    text-align: right;
+}
+.chatPart .user-chat-words {
+    vertical-align: top;
+    font-size: 0.9rem;
+    color: #fff;
+    padding-left: 50px;
+}
+
+/* 投票界面 */
+.voteTip {
+    display: none;
+    color: #fff;
+    font-size: 1rem;
+    text-align: center;
+    position: absolute;
+    bottom: 10%;
+    left: 0;
+    right: 0;
+}
+.vote-identity {
+    display: none;
+    color: #fff;
+    font-size: 0.8rem;
+    text-align: center;
+    position: absolute;
+    bottom: 5%;
+    left: 0;
+    right: 0;
 }
 
 /* 控制器 */
@@ -585,3 +763,4 @@ html, body {
 .sitting {display: none;}
 /*.seat {opacity: 1 !important}*/
 .identity {display: none;}
+.mask {display: none}
